# JIT

./: .gitignore  CMakeLists.txt  FrontEnd.cpp  JIT.cpp  JIT.h  LICENSE  README.md  TODO.md  configure.sh  main.cpp
JIT/: BaseJIT.h  BaseJit.cpp  JIT.cpp  JIT.h
back-end/: BaseJIT.cpp  BaseJIT.h  BaseJit.cpp  JIT.cpp  JIT.h
benchmark/: classes.py  common.py  default.py  files.py  run.py
benchmark/data/: O1.7z  O2.7z  O3.7z
benchmark/llvm/: llvm_common.py  run.py
benchmark/llvm/CHStone/: compile.py  run.py
benchmark/llvm/MachSuite/: compile.py  removed.txt  run.py
benchmark/llvm/polybench/: run.py
benchmark/llvm/tacle-bench/: compile.py  removed.txt  run.py  updated.txt
benchmarks/: clean.sh  common.sh  compile.sh  run.sh
benchmarks/CHStone/: compile.sh  run.sh
benchmarks/CHStone/source/aes/: aes.c  aes.h  aes_dec.h  aes_func.h  aes_key.h
benchmarks/CHStone/source/blowfish/: bf.h  bf_cfb64.c  bf_enc.c  bf_pi.h  bf_skey.c  blowfish.h
benchmarks/CHStone/source/dfdiv/: dfdiv.c  softfloat.h
benchmarks/CHStone/source/dfsin/: softfloat.h
benchmarks/CHStone/source/gsm/: gsm.c
benchmarks/CHStone/source/jpeg/: decode.h  global.h  huffman.c  init.h  jfif_read.c  jpeg2bmp.c  jpeg2bmp.h  main.c  marker.h
benchmarks/CHStone/source/motion/: getbits.c  getvlc.c  motion.c  motion.h  mpeg2dec.h
benchmarks/CHStone/source/sha/: sha.h  sha_driver.c
benchmarks/MachSuite/: compile.sh  run.sh
benchmarks/MachSuite/source/common/: support.h
benchmarks/tacle-bench/: compile.sh  removed.txt  run.sh
front-end/: BaseFrontEnd.cpp  BaseFrontEnd.h  BaseFrontend.cpp  BaseFrontend.h  LLVMFrontEnd.cpp  LLVMFrontEnd.h  LLVMFrontend.cpp  LLVMFrontend.h
lib/: install.sh
reOptimize/: JITLinkRedirectableSymbolManager.cpp  JITLinkRedirectableSymbolManager.h  ReOptimizeLayer.cpp  ReOptimizeLayer.h  RedirectionManager.cpp  RedirectionManager.h
util/: StringToArgv.cpp  StringToArgv.h  Util.cpp  Util.h
(+52 files in other folders)
